# BionicEyes

./: CMakeLists.txt  ConfigSet  README.en.md  README.md  macros.cmake
cmake/: GetArch.cmake  TargetArch.cmake  Utils.cmake
cmake/Modules/: FindEigen3.cmake  FindJPEG.cmake  FindOpenCV_CUDA.cmake  FindOpenCV_NoCUDA.cmake  FindPangolin_temp.cmake  FindSpdlog.cmake  FindZeroMQ.cmake  Finddlib.cmake  Findfmt.cmake
include/: Doxyfile  README.md  evo_be.h  evo_be_Common.h
include/internal/: README.md  evo_be_Cameras.h  evo_be_Common_Internal.h  evo_be_Communication.h  evo_be_Console.h  evo_be_FileSystem.h  evo_be_Helper.h  evo_be_ImageProcess_Core.h  evo_be_ImageProcess_Core_GPU.h  evo_be_Thread.h  evo_be_Timer.h  evo_be_Utilities.h  evo_be_Voice.h
resource/cad/: be4_pitch.stl  be4_roll.stl  be4_yaw.stl
resource/config/: BE3.yaml  be3.json  orbslam_mono.yaml  orbslam_stereo.yaml
resource/config/BE-00/: calibData_opencv.xml
resource/config/BE-09/: calibData_opencv.xml
resource/shader/: frag.glsl  vert.glsl
src/: CMakeLists.txt
src/BionicEyes_Python/: README.txt  evo_be.py  sample.py
src/BionicEyes_Samples/: CMakeLists.txt  README.md
src/BionicEyes_Samples/BE_Sample_6A_Depth/: BE_Sample_6A_Depth.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_Control_Remote/: BE_Sample_Control_Remote.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_Gaze_Parallel/: BE_Sample_Gaze_Parallel.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_GetDeviceList/: BE_Sample_GetDeviceList.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_GrabFakeDataOneByOne/: BE_Sample_GrabFakeDataOneByOne.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_GrabImage_Local/: BE_Sample_GrabImage_Local.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_GrabImage_Remote/: BE_Sample_GrabImage_Remote.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_InfraImage/: BE_Sample_InfraImage.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_Log/: BE_Sample_Log.cpp  BE_Sample_Log.h  BE_Sample_Log_Test.cpp  BE_Sample_spdlog.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_Measure_Distance_Parallel/: BE_Sample_Measure_Distance_Parallel.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_PlayRecordData/: BE_Sample_PlayRecordData.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_SV_VOR/: BE_Sample_SV_VOR.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_SaveData/: BE_Sample_SaveData.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_StereoRectify/: BE_Sample_StereoRectify.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_ThreeAxis/: BE_Sample_ThreeAxis.cpp  CMakeLists.txt
src/BionicEyes_Samples/BE_Sample_VoiceProcess_Remote/: BE_Sample_VoiceProcess_Remote.cpp  CMakeLists.txt
